--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         <span
           class="num equal"
           onclick="document.calc.txt.value=eval(calc.txt.value)"
-          ><i>=</i></span
-        >
+          ><i>=</i></span>
       </form>
     </div>
+    <footer>
+      <h1>Copyright &copy; 2023 - Desenvolvido por <b><a href="https://www.linkedin.com/in/valdezjulian" target="_blank" title="Julian Valdez | LinkedIn">Julian Valdez</a></b></h1>
+    </footer>
   </body>
 </html>
